plugins {
 	id 'distribution'
}

// Java project
apply plugin: 'java'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}


// Repositories providers
repositories {
    mavenCentral()
}

dependencies {
	testImplementation "junit:junit:4.11"     

	implementation ":CommonsCompressPlus"
	implementation ":CommonsLangPlus"
	implementation ":SpecsUtils"
	implementation ":tdrcLibrary"

	implementation ":LaraUtils"
	implementation ":LanguageSpecification"
	implementation ":WeaverInterface"


	implementation group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
	implementation group: 'commons-io', name: 'commons-io', version: '2.4'	
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
}

java {
	withSourcesJar()
}

// Project sources
sourceSets {
   main {
      java {
         srcDir 'src'
      }

	  resources {
		srcDir 'resources'
	  }      
   }
	
   
   test {
      java {
         srcDir 'test'
      }
	  
	  resources {
		srcDir 'resources'
	  }
   }
   
}
